# pid_diagrams

./: (Clone) 02_parsing.ipynb  .cursorrules  .gitignore  00_load_sheet.ipynb  00_load_sheet.py  00_walkthrough.ipynb  01_preprocessing.ipynb  01_preprocessing.py  02_parsing.ipynb  02_parsing.py  02_zero_shot_parsing.ipynb  02a_simple_parsing_example.ipynb  03_evaluation.py  03_few_shot_parsing.ipynb  03_metadata_then_tags.ipynb  03_parsing.ipynb  04_load_sheet.ipynb  README.md  config.yaml  config_alb.yaml  config_local.yaml  df_compare.csv  endpoint_usage.dbquery.ipynb  example_labels.yaml  example_output_1.yaml  example_output_2.yaml  output.yaml  pg_29_expected_results.yaml  pid_diagrams.ipynb  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test_functionality.py
examples/: 05010ca2e0d35676718f1cc15862b8fc_p12.json  05010ca2e0d35676718f1cc15862b8fc_p12_t1.json  05010ca2e0d35676718f1cc15862b8fc_p12_t2.json  05010ca2e0d35676718f1cc15862b8fc_p12_t3.json  05010ca2e0d35676718f1cc15862b8fc_p12_t4.json  05010ca2e0d35676718f1cc15862b8fc_p12_t5.json  05010ca2e0d35676718f1cc15862b8fc_p12_t6.json  05010ca2e0d35676718f1cc15862b8fc_p24.json  05010ca2e0d35676718f1cc15862b8fc_p24_t1.json  05010ca2e0d35676718f1cc15862b8fc_p24_t2.json  05010ca2e0d35676718f1cc15862b8fc_p24_t3.json  05010ca2e0d35676718f1cc15862b8fc_p24_t4.json  05010ca2e0d35676718f1cc15862b8fc_p24_t5.json  05010ca2e0d35676718f1cc15862b8fc_p24_t6.json  05010ca2e0d35676718f1cc15862b8fc_p27.json  05010ca2e0d35676718f1cc15862b8fc_p27_t1.json  05010ca2e0d35676718f1cc15862b8fc_p27_t2.json  05010ca2e0d35676718f1cc15862b8fc_p27_t3.json  (+17 more)
outputs/: tag_raw_responses.txt
(+18 files in other folders)
