[project]
name = "pid-diagrams"
version = "0.1.0"
description = "P&ID diagram processing"
requires-python = "==3.12.3"

# Production dependencies
dependencies = [
    "databricks-connect==16.3.2",
    "pillow==10.3.0",
    "pydantic==2.8.2",
    "pdfplumber==0.11.7",
    "mlflow==3.1.1",
    "openai==1.92.2",
    "python-Levenshtein>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "ipython>=8.0.0",
    "mypy>=1.5.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
# Test discovery
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Output options
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--color=yes",
    "--durations=10",
]

# Markers for categorizing tests
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "config: Configuration tests",
    "parser: Parser tests",
    "preprocess: Preprocessing tests",
]

# Minimum version
minversion = "7.0"

# Test warnings
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true 